style.css
.layout-1 #celek {
  width: 100%;
  max-width: 1250px;
  margin: 0px auto;
  font-family: "Montserrat", sans-serif;
  box-sizing: border-box;
}

#celek .figure {
  margin: 0;
}

.marginZeroFix {
  margin: 0;
}

.maxWidthFix {
  max-width: 100%;
}

.genericHeader {
    text-align: center;
    color: #2484c6;
    font-size: 34px;
    line-height: 46px;
    font-weight: 400;
}

.logoContainer {
  text-align: center;
  margin: 50px 0;
}

.blockOne {
  border-bottom: 3px solid #eaf0f5;
}

.blockContent {
  padding: 55px 84px 35px;
}

.blockContent__flex {
  width: 50%;
  box-sizing: border-box;
  padding: 100px 100px 0 112px;
}

.blockContent__right {
  padding: 100px 100px 0 112px;
}

.blockContent__left {
  padding: 100px 100px 0 83px;
}

.contentTitle {
  text-transform: uppercase;
  color: #707070;
  font-size: 14px;
  font-weight: 500;
  letter-spacing: 1.6px;
  margin-bottom: 55px;
  position: relative;
  padding-left: 15px;
}

.contentTitle::before {
  content: "";
  display: block;
  background: url("./images/C.png") no-repeat;
  position: absolute;
  top: -12px;
  left: 0;
  z-index: 99;
  width: 40px;
  height: 45px;
}

.contentHeader {
  color: #2484c6;
  font-size: 34px;
  font-weight: 400;
  margin-bottom: 24px;
  width: 65%;
}

.contentText {
  color: #464646;
  font-size: 18px;
  line-height: 26px;
  font-weight: 300;
}

.imageContainer {
  position: relative;
}

.imageContainer::after {
  content: "";
  display: block;
  background: url("./images/imageBorderLogo.png") no-repeat;
  position: absolute;
  top: 0;
  right: 0;
  z-index: 99;
  width: 50px;
  height: 60px;
}

.imageRadius {
  border-radius: 0 280px 0 0;
  display: block;
}

.blockFlex__reverse {
  display: flex;
  flex-direction: row-reverse;
}

.blockFlex__normal {
  display: flex;
  flex-direction: row;
}

.imageWidthFlex {
  width: 50%;
  box-sizing: border-box;
}

.contentHeader__widthFix {
  width: auto;
}

/*********BLOCK FIVE*********/

.blockFive {
  display: flex;
  justify-content: space-between;
  gap: 116px;
  padding: 50px 83px 61px;
  color: white;
  background: linear-gradient(45deg, #2484c6, #1c2d5a);
}

.highlightsHeader {
  text-align: center;
  margin-bottom: 55px;
  position: relative;
  height: 115px;
  display: flex;
  flex-direction: column;
  align-content: center;
  justify-content: center;
}

.highlightsHeader::before {
  content: "";
  display: block;
  position: absolute;
  top: -10px;
  left: 50%;
  transform: translateX(-50%);
  z-index: 10;
  background: url("/images/ring.png") no-repeat;
  width: 118px;
  height: 161px;
}

.highlightsHeading {
  font-size: 70px;
  font-weight: 400;
}

.highlightsHeading__fix {
  position: relative;
  top: 10px;
}

.highlightsText {
  font-size: 18px;
  font-weight: 400;
  line-height: 30px;
}

.highlightsSubtitle {
  font-size: 24px;
}

/*********BLOCK SIX*********/

.blockSix {
    margin-bottom: 65px;
}

/*********BLOCK SEVEN*********/

.blockSeven {
    position: relative;
}

.sliderTypeOne__counter {
    background: linear-gradient(227deg, #1C2D5A, #2484C6);
    width: 90px;
    height: 90px;
    display: flex;
    justify-content: center;
    align-items: center;
    border-radius: 100%;
    position: absolute;
    z-index: 99;
    left: 50%;
    transform: translateX(-50%);
    top: -45px;
    font-size: 27px;
    color: white;
}

#sliderCountItem {
    font-weight: 500;
    padding-right: 5px;
}

#sliderCountTotal {
    font-weight: 400;
    padding-left: 5px;
    opacity: 0.7;
}

.blockSeven__bottom {
    display: flex;
    justify-content: space-between;
    align-items: flex-start;
    gap: 121px;
    margin: 0 auto 80px;
    width: 86.64%;
}

.blockSeven__text {
    font-size: 18px;
    line-height: 26px;
    color: #464646;
    font-weight: 300;
}

.blockSeven__header {
    text-align: left;
    width: 75%;
    margin-bottom: 24px;
}

.sliderOne__arrow {
    position: relative;
    z-index: 10;
    top: 30px;
    left: 16px;
}

.sliderOne__arrowRing {
    width: 59px;
    height: 80px;
    position: relative;
    top: -30px;
}

/*********BLOCK EIGHT*********/

.blockEight__background {
  background: linear-gradient(45deg, #2484c6, #1c2d5a);
}

/*********BLOCK NINE*********/

.blockNine {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 86.6%;
  margin: auto;
  margin-bottom: 70px;
  padding-bottom: 13px;
  border-bottom: 3px solid #eaf0f5;
}

.videoCaption {
  font-size: 16px;
  line-height: 19px;
  color: #253746;
  margin-top: 18px;
  width: 576px;
  text-align: center;
}

.videoContainer {
    position: relative;
    z-index: 9;
    display: grid;
}

#playButtonCustom {
    position: absolute;
    z-index: 99;
    left: 50%;
    transform: translateX(-50%);
    align-self: center;
}

#playButtonCustom:hover {
    cursor: pointer;
}

/*********BLOCK TEN*********/

.blockTen {
  background: linear-gradient(45deg, #2484c6, #1c2d5a);
  color: white;
  padding: 47px 0 100px;
  border-radius: 0 280px 0 0;
  margin-bottom: 89px;

}

.contentsHeader {
  text-align: center;
  font-weight: 400;
  font-size: 34px;
  line-height: 46px;
  margin-bottom: 74px;
}

.contentsContainer {
  display: flex;
  justify-content: center;
  gap: 89px;
}

.contentsList {
  display: flex;
  flex-direction: column;
  gap: 20px;
  font-size: 18px;
  font-weight: 400;
}

/*********BLOCK ELEVEN********/

.blockEleven {
    width: 86.64%;
    margin: auto;
}

.slider {
    display: flex;
    justify-content: space-between;
    gap: 30px;
    margin-top: 15px;
}

.slider__item {
    width: 283px;
}

.sliderContainer {
    display: flex;
    overflow: hidden;
    scroll-behavior: smooth;
}

.sliderTypeOne__dummy {
    width: 240px;
    height: 462px;
    flex: none;
}

.sliderTypeOne {
    gap: 21px;
    margin-bottom: 58px;
    position: relative;
}

.blockSeven__top::before, .blockSeven__top::after {
    content: '';
    width: 241px;
    height: 462px;
    display: block;
    position: absolute;
    z-index: 99;
    top: 0;
}

.blockSeven__top::before {
    background: linear-gradient(270deg, #FFFFFF00 0%, #FFFFFF 100%);
    left: -1px;
}

.blockSeven__top::after {
    background: linear-gradient(90deg, #FFFFFF00 0%, #FFFFFF 100%);
    right: -1px;
}

.sliderTypeTwo {
    gap: 28px;
}

.sectionDivider {
    height: 3px;
    width: 86%;
    background-color: #EAF0F5;
    margin: 41px auto 0;
}

.slider__arrow {
    position: relative;
    z-index: 10;
    top: 105px;
    left: 16px;
}

.slider__arrowNext:hover, .slider__arrowPrev:hover {
    cursor: pointer;
}

.slider__arrowPositionFix {
    left: 21px;
}

.slider__arrowContainer {
    position: relative;
}

.slider__arrowRing {
    width: 59px;
    height: 80px;
    position: relative;
    top: 43px;
}

.slider__header {
    height: 70px;
    margin-bottom: 16px;
    font-size: 16px;
    color: #2484C6;
    line-height: 24px;
}

.slider__price {
    text-align: center;
    margin-bottom: 22px;
    font-size: 18px;
    font-weight: 600;
}

.slider__text {
    font-size: 15px;
    color: #464646;
    line-height: 26px;
    font-weight: 400;
    margin-bottom: 13px;
}

/*********BLOCK TWELVE********/

.blockTwelve {
    width: 86.64%;
    margin: 84px auto 97px;
}

/*********BLOCK THIRTEEN********/

.comparisonHeader {
  margin-bottom: 30px;
}

.comparisonTable {
  overflow-x: scroll;
}

.comparisonTable__row {
  display: grid;
  grid-template-columns: 245px 289px 289px 289px 289px 289px;
}

.comparisonTable__itemTitle {
  padding: 29px 56px;
  text-align: center;
  color: #2484c6;
  font-size: 14px;
  line-height: 18px;
  font-weight: 500;
}

.comparisonTable__origin {
  position: relative;
}

.comparisonTable__origin::after {
  content: "";
  display: block;
  width: 245px;
  height: 1628px;
  background: linear-gradient(180deg, #1c2d5a, #2484c6);
  position: absolute;
  top: 0;
  z-index: 0;
}

.comparisonTable__cell {
  border-top: 1px solid #d9e2e8;
  border-right: 1px solid #d9e2e8;
  display: grid;
}

.comparisonTable__topImage {
  text-align: center;
  padding: 22px 0;
}

.comparisonTable__mainColumn {
  color: white;
  position: relative;
  padding: 17px 25px;
  font-size: 14px;
  line-height: 24px;
}

.comparisonTable__price {
  font-size: 18px;
  color: #253746;
  line-height: 21px;
  font-weight: 600;
  text-align: center;
  padding-top: 15px;
  margin-bottom: 17px;
}

.comparisonTable__rowDivider {
  display: grid;
  grid-template-columns: 245px 1445px;
}

.comparisonTable__header {
  color: white;
  position: relative;
  padding: 15px 25px;
  background-color: #1c2d5a;
  font-size: 20px;
  font-weight: 600;
}

.comparisonTable__divider {
  background-color: #d9e2e8;
}

.comparisonTable__text {
  padding: 17px 32px 17px 28px;
  font-size: 16px;
  color: #333333;
  line-height: 26px;
  font-weight: 400;
}

.comparisonTable__text-center {
  text-align: center;
}

.comparisonTable__mainColumn-borderTop {
  border-top: 1px solid rgb(34, 72, 122);
}

.comparisonTable__imageCheckmark {
  padding: 17px 32px 17px 28px;
  display: grid;
  justify-content: center;
}

.comparisonTable__notApplicable {
  height: 3px;
  width: 25px;
  display: block;
  background-color: #333333;
  border-radius: 15px 15px;
  margin: auto;
}

.comparisonTable__cellBottom {
  border-top: 1px solid #d9e2e8;
  padding: 28px 0 43px;
}

.comparisonTable__goToProduct {
  display: block;
  margin: auto;
  width: 135px;
  text-decoration: none;
  color: white;
  font-size: 12px;
  line-height: 15px;
  letter-spacing: 2.4px;
  background-color: #1c2d5a;
  padding: 12px 21px 11px;
  border-radius: 28px;
  text-align: center;
}

.comparisonTable__tagWrapper {
    padding: 4px;
    background-color: white;
    display: inline-block;
    box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
}

.comparisonTable__tagText {
  text-align: center;
  color: black;
  font-size: 12px;
  font-weight: 600;
  white-space: nowrap
}

.comparisonTable__tagContainer {
  margin: auto;
  padding: 10px 20px;
  border-radius: 4px;
  display: inline-block;
  text-align: center;
  border: 2px solid white;
  margin-bottom: 15px;
}

.comparisonTable__tagCurrent {
  background-color: #92D4FF;
  box-shadow: 0px 3px 15px #92D4FF;
}

.comparisonTable__tagBestPrice {
    background-color: #BBC5E4;
    box-shadow: 0px 3px 15px #BBC5E4;
}

.comparisonTable__tagEffective {
    background-color: #E4D9BB ;
    box-shadow: 0px 3px 15px #E4D9BB;
}

.comparisonTable::-webkit-scrollbar {
    height: 20px;
  }

.comparisonTable::-webkit-scrollbar-track-piece {
    background-color: #EAF0F5;
}

.comparisonTable::-webkit-scrollbar-thumb {
    background-color:#C2CED6;
}

.comparisonTable::-webkit-scrollbar-button {
    background: transparent linear-gradient(180deg, #1C2D5A 0%, #2484C6 100%) 0% 0% no-repeat padding-box;
}

.comparisonTable::-webkit-scrollbar-button {
    background: url('images/arrowLeft.svg') no-repeat
}

